# project-iot

./: .env.template  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt  run.sh  setup.sh  trial.sh
esp-idf/: Dockerfile  entrypoint.sh  generate_kconfig.py
esp-idf/esp_flash_server/: esp_rfc2217_server.py  pyproject.toml
esp-idf/project/: CMakeLists.txt  config.h.in  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp-idf/project/components/bluetooth/: CMakeLists.txt  ble.c
esp-idf/project/components/protocol_examples_common/: CMakeLists.txt  connect.c  console_cmd.c  (+1 more)
esp-idf/project/main/: Kconfig.projbuild  main.c
esp_32/: sdkconfig  sdkconfig.old
esp_32/components/utils/: clients.c  utils.c
esp_32/main/: Kconfig.projbuild  main.c
esp_32/tcp_client/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp_32/tcp_client/main/: CMakeLists.txt  Kconfig.projbuild  main.c  tcp_client_v4.c
rasp/: pyproject.toml  test.py
rasp/src/: gui.py  gui.ui  main.py
rasp/src/ble/: main_client.py  utils.py
rasp/src/utils/: exceptions.py  general.py  models.py  packet_parser.py  prints.py
rasp/src/wifi/: main_server.py  servers.py
scripts/: Dockerfile  main.py  models.py
server/: Dockerfile  main_server.py  models.py  packet_parser.py  pyproject.toml  servers.py
server/src/: main.py  main_server.py  models.py  packet_parser.py  servers.py
server/src/ble/: Maquina_de_Estado_para_Bluetooth.py  main_client.py  pyproject.toml  utils.py
server/src/utils/: models.py  packet_parser.py
server/src/wifi/: main_server.py  servers.py
(+18 files in other folders)
