[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "psycopg2-binary>=2.9.6",
    "peewee>=3.16.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "black>=23.3.0",
    "bleak>=0.20.2",
    "pygatt>=4.0.5",
    "pexpect>=4.8.0",
    "pytz>=2023.3",
]
requires-python = ">=3.9"
license = {text = "MIT"}


[tool.isort]
profile = "black"

[tool.black]
line-length = 95

[tool.pdm.scripts]
isort = "isort src"
black = "black src"
lint = "flake8 src"
format = {composite = ["isort", "black"]}